--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OrangeYouTube</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <nav class="navbar">
+        <div class="navbar-left">
+            <div class="logo">
+                <img src="https://cdn-icons-png.flaticon.com/512/889/889199.png" alt="IMDb Logo">
+            </div>
+            <button class="menu-btn">Menu</button>
+        </div>
+        <div class="search-bar">
+            <select>
+                <option value="all">All</option>
+            </select>
+            <input type="text" placeholder="Search IMDb">
+            <button class="search-btn">&#128269;</button>
+        </div>
+        <div class="navbar-right">
+            <a href="#" class="navbar-link"><img
+                    src="https://www.pngkit.com/png/full/193-1934837_imdb-imdb-app-logo-png-imdb-pro-logo.png" alt="IMDbPRO Logo" width="70"></a>
+            <a href="#" class="navbar-link">Watchlist</a>
+            <a href="#" class="navbar-link">Sign In</a>
+            <select class="lang-select">
+                <option value="en">EN</option>
+            </select>
+        </div>
+    </nav>
 </body>
+
 </html>
