--- a/registration.html
+++ b/registration.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix</title>
     <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
     <nav>
@@ -12,6 +13,7 @@
     </nav>
     <div class="form-wrapper">
         <h2>Увійти</h2>
+        <form action="#" onsubmit="redirectToMain(event)"></form>
         <form action="#">
             <div class="form-control">
                 <input type="text" required>
